--- a/TaesanHotelWeb/src/main/webapp/resources/css/bootstrap.css
+++ b/TaesanHotelWeb/src/main/webapp/resources/css/bootstrap.css
@@ -9,7 +9,7 @@
 
 	font-family:"GoodFont"; /*폰트 패밀리 이름 추가*/
 	
-	src:url("resources/fonts/KBIZfont.ttf"); /*폰트 파일 주소*/
+	src:url("../fonts/KBIZHanmaumMyungjo.ttf"); /*폰트 파일 주소*/
 
 	}
 html {
@@ -19,6 +19,13 @@ html {
 }
 body {
   margin: 0;
+}
+body {
+  font-family: "GoodFont", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #fff;
 }
 article,
 aside,
@@ -1079,13 +1086,6 @@ html {
   font-size: 10px;
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
 }
 input,
 button,
